--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -26,7 +26,7 @@
         android:id="@+id/recycler_tasks"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@android:color/holo_green_light"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -34,5 +34,15 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar_tasks">
 
     </android.support.v7.widget.RecyclerView>
+
+    <EditText
+        android:id="@+id/etInputTask"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/et_input_task_hint"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
