--- a/app/src/main/res/menu/menu_tasks.xml
+++ b/app/src/main/res/menu/menu_tasks.xml
@@ -2,12 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_change_name"
-        android:orderInCategory="100"
-        android:title="@string/action_changeName"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_refresh_rooms"
+        android:id="@+id/action_refresh"
         android:orderInCategory="100"
         android:icon="@drawable/ic_action_refresh"
         android:title="@string/action_refresh"
