--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -64,17 +64,26 @@
         app:srcCompat="@android:drawable/ic_input_add"
         app:fabSize="mini"
         />
-    <include layout="@layout/content_main" />
+
+    <include
+        layout="@layout/content_main"
+        android:layout_width="384dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="0dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:src="@android:drawable/ic_dialog_email"
         android:visibility="invisible"
         app:backgroundTint="#ca7f86"
         app:elevation="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/fab"
+        app:layout_constraintEnd_toEndOf="parent"
         app:pressedTranslationZ="12dp" />
 
     <android.support.design.widget.FloatingActionButton
@@ -82,10 +91,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:src="@android:drawable/ic_lock_idle_low_battery"
         android:visibility="invisible"
         app:backgroundTint="#7FCAC3"
         app:elevation="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/fab2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:pressedTranslationZ="12dp" />
 
 
