--- a/app/src/main/res/menu/menu_tasks.xml
+++ b/app/src/main/res/menu/menu_tasks.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
-        android:icon="@drawable/updt"
+        android:icon="@drawable/ic_action_refresh"
         android:title="@string/action_refresh"
         app:showAsAction="always" />
 </menu>
