--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -17,14 +17,14 @@
         <TextView
             android:id="@+id/tvText"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="46dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:text="Text"
             android:textColor="@android:color/white"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,11 +32,11 @@
         <TextView
             android:id="@+id/tvName"
             android:layout_width="336dp"
-            android:layout_height="18dp"
+            android:layout_height="29dp"
             android:layout_marginStart="8dp"
             android:text="Name"
             android:textColor="@android:color/white"
-            android:textSize="10sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvText" />
 
